feat: consul for service discovery
- added haproxy instead of nginx
- added consul for service discovery
- removed nginx
