# server/rpc_health.go
@@ -4,22 +4,20 @@ import (
 	"context"
 	"time"
 
+	healthpb "google.golang.org/grpc/health/grpc_health_v1"
 	"google.golang.org/protobuf/types/known/durationpb"
 	"google.golang.org/protobuf/types/known/timestamppb"
 
 	rpc "github.com/sirjager/trueauth/rpc"
 )
 
-const (
-	StatusUP = "UP"
-)
-
 func (s *Server) Health(ctx context.Context, req *rpc.HealthRequest) (*rpc.HealthResponse, error) {
-	s.authorize(ctx)
 	return &rpc.HealthResponse{
-		Status:    StatusUP,
+		Service:   s.config.ServiceName,
+		Server:    s.config.ServerName,
+		Status:    healthpb.HealthCheckResponse_SERVING.String(),
 		Timestamp: timestamppb.Now(),
-		Started:   timestamppb.New(s.config.Server.StartTime),
-		Uptime:    durationpb.New(time.Since(s.config.Server.StartTime)),
+		Started:   timestamppb.New(s.config.StartTime),
+		Uptime:    durationpb.New(time.Since(s.config.StartTime)),
 	}, nil
 }
