# server/rpc_welcome.go
@@ -9,13 +9,13 @@ import (
 
 // welcomeMessage returns a formatted welcome message string.
 func welcomeMessage(name string) string {
-	return fmt.Sprintf("Welcome to %s API", name)
+	return fmt.Sprintf("Welcome to %s service", name)
 }
 
 // Welcome is a service method that returns a welcome message.
 func (s *Server) Welcome(ctx context.Context, r *rpc.WelcomeRequest) (*rpc.WelcomeResponse, error) {
 	return &rpc.WelcomeResponse{
-		Message: welcomeMessage(s.config.Server.AppName),
+		Message: welcomeMessage(s.config.ServiceName),
 		Docs:    "/v1/docs",
 	}, nil
 }
